Fixing styling on ad's on the side.

--- a/themes/gstylez/layout/partials/comments.ejs
+++ b/themes/gstylez/layout/partials/comments.ejs
@@ -1,4 +1,14 @@
 <div class="comment-section">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- bottom -->
+    <ins class="adsbygoogle"
+         style="display:inline-block;width:728px;height:90px"
+         data-ad-client="ca-pub-5631957611149324"
+         data-ad-slot="2076769093"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
   <% if (page.comments){ %>
     <div id="disqus_thread"></div>
     <script>
