Fixing styling on ad's on the side.

--- a/themes/gstylez/layout/partials/comments.ejs
+++ b/themes/gstylez/layout/partials/comments.ejs
@@ -1,15 +1,15 @@
 <div class="comment-section">
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- bottom -->
-    <ins class="adsbygoogle"
-         style="display:inline-block;width:728px;height:90px"
-         data-ad-client="ca-pub-5631957611149324"
-         data-ad-slot="2076769093"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-
-  <% if (page.comments){ %>
+    <div style="margin-right: auto; margin-left: auto;text-align: center;">
+        <!-- bottom -->
+        <ins class="adsbygoogle"
+             style="display:inline-block;width:728px;height:90px"
+             data-ad-client="ca-pub-5631957611149324"
+             data-ad-slot="2076769093"></ins>
+        <script>
+            (ad = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+    <% if (page.comments){ %>
     <div id="disqus_thread"></div>
     <script>
 
@@ -31,6 +31,6 @@
     </script>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
-<% } %>
+    <% } %>
 
 </div>
