--- a/themes/gstylez/layout/post.ejs
+++ b/themes/gstylez/layout/post.ejs
@@ -41,6 +41,17 @@
                   <h5 class="author-title">posted by <%= page.author %></h5>
                   <% } %>
               </div>
+              <div style="margin-right: auto; margin-left: auto;text-align: center;">
+                  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                  <!-- Verytop of post -->
+                  <ins class="adsbygoogle"
+                       style="display:inline-block;width:970px;height:90px"
+                       data-ad-client="ca-pub-5631957611149324"
+                       data-ad-slot="9401559495"></ins>
+                  <script>
+                      (google = window.adsbygoogle || []).push({});
+                  </script>
+              </div>
           <section class="post-content">
             <%-page.content%>
           </section>
@@ -77,16 +88,7 @@
     </div>
     <aside>
         <div id="toc">
-            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <!-- Post Ad -->
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-5631957611149324"
-                 data-ad-slot="8317803492"
-                 data-ad-format="auto"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
+
         </div>
 
     </aside>
