Fixing styling on ad's on the side.

--- a/themes/gstylez/layout/post.ejs
+++ b/themes/gstylez/layout/post.ejs
@@ -41,15 +41,16 @@
                   <h5 class="author-title">posted by <%= page.author %></h5>
                   <% } %>
               </div>
-              <div style="margin-right: auto; margin-left: auto;text-align: center;">
+              <div style="margin-right: auto;margin-left: auto;text-align: center;">
                   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
                   <!-- Verytop of post -->
                   <ins class="adsbygoogle"
                        style="display:inline-block;width:970px;height:90px"
                        data-ad-client="ca-pub-5631957611149324"
                        data-ad-slot="9401559495"></ins>
                   <script>
-                      (google = window.adsbygoogle || []).push({});
+                      (a = window.adsbygoogle || []).push({});
                   </script>
               </div>
           <section class="post-content">
@@ -88,7 +89,14 @@
     </div>
     <aside>
         <div id="toc">
-
+            <!-- Side -->
+            <ins class="adsbygoogle"
+                 style="display:inline-block;width:300px;height:600px"
+                 data-ad-client="ca-pub-5631957611149324"
+                 data-ad-slot="7645624696"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
         </div>
 
     </aside>
