Fixing styling on ad's on the side.

--- a/themes/gstylez/layout/partials/footer.ejs
+++ b/themes/gstylez/layout/partials/footer.ejs
@@ -8,7 +8,13 @@
 <%- js('lib/jquery-ui') %>
 <%- js('lib/jquery.tocify') %>
 <%- js('js/main') %>
+<%- js('js/ads') %>
 <script type='text/javascript'>
+    if(!document.getElementById('oOEeBTitMpvD')){
+        document.getElementById('ad1').style.display='block';
+        document.getElementById('ad2').style.display='block';
+    }
+
     window.__lo_site_id = 65936;
 
     (function() {
