--- a/themes/gstylez/layout/post.ejs
+++ b/themes/gstylez/layout/post.ejs
@@ -41,18 +41,24 @@
                   <h5 class="author-title">posted by <%= page.author %></h5>
                   <% } %>
               </div>
-              <div style="margin-right: auto;margin-left: auto;text-align: center;">
-                  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
-                  <!-- Verytop of post -->
-                  <ins class="adsbygoogle"
-                       style="display:inline-block;width:970px;height:90px"
-                       data-ad-client="ca-pub-5631957611149324"
-                       data-ad-slot="9401559495"></ins>
-                  <script>
-                      (a = window.adsbygoogle || []).push({});
-                  </script>
+              <div class="Supporter Supporter--size-728x90">
+                  <div class="Supporter-placeholder" id="ad1">
+                      <h4>If you are enjoying this blog post, please consider pausing AdBlock on this domain. It helps us cover hosting fees. :)</h4>
+                  </div>
+                  <div>
+                      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                      <!-- Post Ad -->
+                      <ins class="adsbygoogle"
+                           style="display:block"
+                           data-ad-client="ca-pub-5631957611149324"
+                           data-ad-slot="8317803492"
+                           data-ad-format="auto"></ins>
+                      <script>
+                          (adsbygoogle = window.adsbygoogle || []).push({});
+                      </script>
+                  </div>
               </div>
+
           <section class="post-content">
             <%-page.content%>
           </section>
@@ -89,15 +95,15 @@
     </div>
     <aside>
         <div id="toc">
-            <!-- Side -->
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- TOP RIGHT**** -->
             <ins class="adsbygoogle"
-                 style="display:inline-block;width:300px;height:600px"
+                 style="display:inline-block;width:300px;height:250px"
                  data-ad-client="ca-pub-5631957611149324"
-                 data-ad-slot="7645624696"></ins>
+                 data-ad-slot="4273355895"></ins>
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
-
     </aside>
 </div>
