--- a/themes/gstylez/layout/partials/comments.ejs
+++ b/themes/gstylez/layout/partials/comments.ejs
@@ -1,14 +1,21 @@
 <div class="comment-section">
-    <div style="margin-right: auto; margin-left: auto;text-align: center;">
-        <!-- bottom -->
-        <ins class="adsbygoogle"
-             style="display:inline-block;width:728px;height:90px"
-             data-ad-client="ca-pub-5631957611149324"
-             data-ad-slot="2076769093"></ins>
-        <script>
-            (ad = window.adsbygoogle || []).push({});
-        </script>
+    <div class="Supporter Supporter--size-728x90">
+        <div class="Supporter-placeholder" id="ad2">
+            <h4>If you are enjoying this blog post, please consider pausing AdBlock on this domain. It helps us cover hosting fees. :)</h4>
+        </div>
+        <div>
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- bottom -->
+            <ins class="adsbygoogle"
+                 style="display:inline-block;width:728px;height:90px"
+                 data-ad-client="ca-pub-5631957611149324"
+                 data-ad-slot="2076769093"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
     </div>
+
     <% if (page.comments){ %>
     <div id="disqus_thread"></div>
     <script>
