Fixing styling on ad's on the side.

--- a/themes/gstylez/layout/post.ejs
+++ b/themes/gstylez/layout/post.ejs
@@ -96,11 +96,11 @@
     <aside>
         <div id="toc">
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <!-- TOP RIGHT**** -->
+            <!-- THE REal top right ********** -->
             <ins class="adsbygoogle"
-                 style="display:inline-block;width:300px;height:250px"
+                 style="display:inline-block;width:250px;height:250px"
                  data-ad-client="ca-pub-5631957611149324"
-                 data-ad-slot="4273355895"></ins>
+                 data-ad-slot="8703555490"></ins>
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
