Fixing styling on ad's on the side.

--- a/themes/gstylez/layout/partials/comments.ejs
+++ b/themes/gstylez/layout/partials/comments.ejs
@@ -1,5 +1,5 @@
 <div class="comment-section">
-    <div class="Supporter Supporter--size-728x90">
+    <div class="Supporter Supporter--size-728x90" style="margin-bottom: 30px;">
         <div class="Supporter-placeholder" id="ad2">
             <h4>If you are enjoying this blog post, please consider pausing AdBlock on this domain. It helps us cover hosting fees. :)</h4>
         </div>
