--- a/themes/gstylez/layout/partials/footer.ejs
+++ b/themes/gstylez/layout/partials/footer.ejs
@@ -13,6 +13,7 @@
     if(!document.getElementById('oOEeBTitMpvD')){
         document.getElementById('ad1').style.display='block';
         document.getElementById('ad2').style.display='block';
+        document.getElementById('ad3').style.display='block';
     }
 
     window.__lo_site_id = 65936;
