--- a/themes/gstylez/source/css/main.css
+++ b/themes/gstylez/source/css/main.css
@@ -29,6 +29,10 @@ body {
     width: 728px;
     height: 90px;
 }
+.Supporter--size-250x250 {
+    width: 250px;
+    height: 250px;
+}
 .Supporter {
     position: relative;
     margin: 0 auto;
@@ -48,7 +52,9 @@ body {
     margin: 0;
     overflow: hidden;
     color: #FFFFFF;
-    background-color: #5fcf80;
+    background-color: #4184f3;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 body.nav-active{
