--- a/themes/gstylez/source/css/main.css
+++ b/themes/gstylez/source/css/main.css
@@ -1,12 +1,16 @@
 /*html structure following this spec http://oli.jp/2009/html5-structure1/*/
 
 /*material color pallete https://www.google.com/design/spec/style/color.html#color-color-palette*/
-
+#ad3 {
+    float: left;
+}
 * {
     box-sizing: border-box;
     -webkit-tap-highlight-color: transparent;
 }
-
+aside ul {
+    display: table;
+}
 #tocify-header0 {
     padding-top: 20px;
 }
@@ -32,6 +36,7 @@ body {
 .Supporter--size-250x250 {
     width: 250px;
     height: 250px;
+    float: left;
 }
 .Supporter {
     position: relative;
