Adding new blog post.

--- a/themes/gstylez/layout/post.ejs
+++ b/themes/gstylez/layout/post.ejs
@@ -60,7 +60,8 @@
               </div>
 
           <section class="post-content">
-            <%-page.content%>
+              <div class="fb-like" style="margin-top: 20px;" data-href="https://www.facebook.com/progblog.io" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
+              <%-page.content%>
           </section>
         </article>
         <% if (page.total > 1){ %>
@@ -113,4 +114,14 @@
             </div>
         </div>
     </aside>
+
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8&appId=747752418734492";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
 </div>
