Adding Clicky analytics

--- a/themes/gstylez/layout/partials/footer.ejs
+++ b/themes/gstylez/layout/partials/footer.ejs
@@ -51,4 +51,25 @@
         s.src = '//static.getclicky.com/js';
         ( document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0] ).appendChild( s );
     })();
+
+
+    <!-- Google Code for Website visit Conversion Page -->
+    /* <![CDATA[ */
+    var google_conversion_id = 871593227;
+    var google_conversion_language = "en";
+    var google_conversion_format = "3";
+    var google_conversion_color = "ffffff";
+    var google_conversion_label = "9Z_1CO2i82wQi-rNnwM";
+    var google_remarketing_only = false;
+    /* ]]> */
+
+
+
 </script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+<div style="display:inline;">
+    <img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/871593227/?label=9Z_1CO2i82wQi-rNnwM&amp;guid=ON&amp;script=0"/>
+    </div>
+    </noscript>
