--- a/themes/gstylez/source/css/nav-icon.css
+++ b/themes/gstylez/source/css/nav-icon.css
@@ -27,7 +27,7 @@
     position: absolute;
     height: 4px;
     width: 100%;
-    background: #fff;
+    background: #fdfdfd;
     /*border-radius: 9px;*/
     opacity: 1;
     left: 0;
@@ -129,7 +129,7 @@
     width: 40px;
     height: 40px;
     /*border: 1px solid #fff;*/
-    background: #4184f3;
+    background: #559262;
     border-radius: 50%;
     /*box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);*/
     cursor: pointer;
