--- a/themes/gstylez/layout/partials/nav.ejs
+++ b/themes/gstylez/layout/partials/nav.ejs
@@ -7,7 +7,7 @@
         <nav>
             <div class="logo wave">
                 <a href="<%- url_for() %>" id="logo" style="display: inline-flex;">
-                    <img src="<%- url_for('img/logo-green.png')%>" style="height: 55px;">
+                    <img src="<%- url_for('img/logo-md-green.png')%>" style="height: 55px;">
                     <div style="margin-left: 7px;"><%= config.title %></div>
                 </a>
             </div>
