--- a/themes/gstylez/source/css/prism-customize.css
+++ b/themes/gstylez/source/css/prism-customize.css
@@ -14,7 +14,7 @@ section.post-content .highlight pre,section.post-content pre {
     overflow: auto;
     font-size: 85%;
     line-height: 1.45;
-    background-color: #f7f7f7;
+    background-color: #fdfdfd;
     border: 0;
     border-radius: 3px
 }
@@ -48,7 +48,7 @@ section.post-content pre .token.operator{
 }
 section.post-content pre[class*="language-"] {
     border-radius: 0;
-    background: #f7f7f7;
+    background: #fdfdfd;
     position: relative;
     font-size: .9em;
     margin: 15px -15px;
