final edits v2 - added pagination stylings and favicons, app icons

--- a/themes/gstylez/layout/partials/head.ejs
+++ b/themes/gstylez/layout/partials/head.ejs
@@ -22,11 +22,26 @@
                 <% if (title){ %><%= title %> | <% } %><%= config.title %>
             </title>
             <meta content="width=device-width, initial-scale=1" name="viewport">
-            <meta name="theme-color" content="#4184f3">
             <% if (theme.rss){ %>
             <link href="<%- theme.rss %>" rel="alternate" title="<%= config.title %>" type="application/atom+xml"/>
             <% } %>
-            <link href="<%- url_for('img/favicon.ico') %>" rel="icon"/>
+            <link rel="apple-touch-icon" sizes="57x57" href="<%- url_for('img/apple-icon-57x57.png') %>">
+            <link rel="apple-touch-icon" sizes="60x60" href="<%- url_for('img/apple-icon-60x60.png') %>">
+            <link rel="apple-touch-icon" sizes="72x72" href="<%- url_for('img/apple-icon-72x72.png') %>">
+            <link rel="apple-touch-icon" sizes="76x76" href="<%- url_for('img/apple-icon-76x76.png') %>">
+            <link rel="apple-touch-icon" sizes="114x114" href="<%- url_for('img/apple-icon-114x114.png') %>">
+            <link rel="apple-touch-icon" sizes="120x120" href="<%- url_for('img/apple-icon-120x120.png') %>">
+            <link rel="apple-touch-icon" sizes="144x144" href="<%- url_for('img/apple-icon-144x144.png') %>">
+            <link rel="apple-touch-icon" sizes="152x152" href="<%- url_for('img/apple-icon-152x152.png') %>">
+            <link rel="apple-touch-icon" sizes="180x180" href="<%- url_for('img/apple-icon-180x180.png') %>">
+            <link rel="icon" type="image/png" sizes="192x192" href="<%- url_for('img/android-icon-192x192.png') %>">
+            <link rel="icon" type="image/png" sizes="32x32" href="<%- url_for('img/favicon-32x32.png') %>">
+            <link rel="icon" type="image/png" sizes="96x96" href="<%- url_for('img/favicon-96x96.png') %>">
+            <link rel="icon" type="image/png" sizes="16x16" href="<%- url_for('img/favicon-16x16.png') %>">
+            <link rel="manifest" href="<%- url_for('img/manifest.json') %>">
+            <meta name="msapplication-TileColor" content="#559262">
+            <meta name="msapplication-TileImage" content="<%- url_for('img/ms-icon-144x144.png') %>">
+            <meta name="theme-color" content="#559262">
 
             <%- css('css/highlight.light') %>
             <%- css('css/prism-customize') %>
