--- a/themes/gstylez/layout/index.ejs
+++ b/themes/gstylez/layout/index.ejs
@@ -7,7 +7,7 @@
   <div class="main index" style="width: 50% !important;">
 
   <% page.posts.each(function(post, i){ %>
-    <article>
+    <article class="pb-article">
       <a href="<%- url_for(post.path) %>" >
         <%if(post.cover){%>
           <header class="post-header with-cover" style="background-image:url('<%- config.root+post.path+post.cover%>')" >
@@ -57,10 +57,10 @@
   <%- partial('partials/pagination') %>
 
   </div>
-  <%if(theme.sidebar&&theme.widgets.length){%>
-    <aside>
-        <a class="img" target="_blank" href="https://www.subtome.com/#/subscribe?feeds=http://feeds.feedburner.com/progblog/BLNZ" onclick="this.href = subscribeNow(this.href,'SubToMe');return true"><img src="https://www.subtome.com/subtome-feedburner.png" alt="Subscribe with SubToMe"></a>
-        <%- partial('partials/widgets') %>
-    </aside>
-  <%}%>
+  <%//if(theme.sidebar&&theme.widgets.length){%>
+    <!--<aside>-->
+        <!--<a class="img" target="_blank" href="https://www.subtome.com/#/subscribe?feeds=http://feeds.feedburner.com/progblog/BLNZ" onclick="this.href = subscribeNow(this.href,'SubToMe');return true"><img src="https://www.subtome.com/subtome-feedburner.png" alt="Subscribe with SubToMe"></a>-->
+        <!--<%- partial('partials/widgets') %>-->
+    <!--</aside>-->
+  <%//}%>
 </div>
