final edits v2 - new site post and other styles

--- a/themes/gstylez/layout/index.ejs
+++ b/themes/gstylez/layout/index.ejs
@@ -1,6 +1,6 @@
 <script>
     $(function() {
-        $('#home-header').append('<section class="banner"> <div class="hero-title"> <h1 style="top: 100px;"> Programing Tutorials &amp; Resources </h1> <h4 id="banner-description" style="top: 100px; width: 50%; margin-left: 25%;">Learn with us! As Full Stack developers we are constantly learning new skills. Each week we take what we learned and put it here.</h4> </div> </section>');
+        $('#home-header').append('<section class="banner"> <div class="hero-title"> <h1 style="top: 100px;"> Programing Tutorials &amp; Resources </h1> <h4 id="banner-description" style="top: 100px; width: 50%; margin-left: 25%;">Learn with us! As Full Stack developers we are constantly learning new skills, and this blog is an outlet to share our findings.</h4> </div> </section>');
     });
 </script>
 <div class="row">
