--- a/themes/gstylez/source/css/main.css
+++ b/themes/gstylez/source/css/main.css
@@ -528,6 +528,8 @@ article blockquote ol,article blockquote ul{
     height: 100%;
     width: 100%;
     padding: 10px;
+    -webkit-transition: background 0.2s ease-in, color 0.2s ease-in;
+    transition: background 0.2s ease-in, color 0.2s ease-in;
 }
 
 .pagination .next, .pagination .prev{
