Adding Clicky analytics

--- a/themes/gstylez/layout/partials/footer.ejs
+++ b/themes/gstylez/layout/partials/footer.ejs
@@ -13,7 +13,7 @@
     if(!document.getElementById('oOEeBTitMpvD')){
         document.getElementById('ad1').style.display='block';
         document.getElementById('ad2').style.display='block';
-        document.getElementById('ad3').style.display='block';
+//        document.getElementById('ad3').style.display='none';
     }
 
     window.__lo_site_id = 65936;
