--- a/themes/gstylez/source/css/main.css
+++ b/themes/gstylez/source/css/main.css
@@ -105,6 +105,10 @@ h1 {
     line-height: 1.2;
 }
 
+p {
+    font-weight: 400;
+}
+
 .content .main .pb-article h1.post-title {
     border: none;
     line-height: 1.2em;
@@ -112,14 +116,12 @@ h1 {
 
 .content h1.post-title {
     border-bottom: 1px solid #e3e3e3;
-    line-height: 0.25em;
     padding-left: 10px;
 }
 
 h2 {
     padding-bottom: .3em;
     font-size: 1.75em;
-    line-height: 0.25em;
 }
 
 h3 {
