--- a/themes/gstylez/source/css/highlight.light.css
+++ b/themes/gstylez/source/css/highlight.light.css
@@ -38,7 +38,7 @@
   color: color-link;
 }
 figure.highlight {
-  background: #f5f5f5;
+  /*background: #f5f5f5;*/
   /*border: 1px solid color-border;*/
   /*padding: 7px 15px;*/
   /*border-radius: 2px;*/
