--- a/themes/gstylez/source/css/main.css
+++ b/themes/gstylez/source/css/main.css
@@ -8,6 +8,9 @@
     box-sizing: border-box;
     -webkit-tap-highlight-color: transparent;
 }
+p {
+    font-weight: 400;
+}
 aside ul {
     display: table;
 }
@@ -153,7 +156,7 @@ a {
     text-decoration: none;
     -webkit-transition: color 0.2s ease-in;
     transition: color 0.2s ease-in;
-    font-weight: 500;
+    font-weight: 700;
 }
 
 a:hover {
@@ -373,6 +376,10 @@ figure.highlight .gutter{
     padding: 0 5px;
 }
 
+figure.highlight {
+    border-left: 4px solid #559262;
+}
+
 /*index cards*/
 .post-header{
     /*background-color: #559262;*/
@@ -394,6 +401,50 @@ figure.highlight .gutter{
     /*padding: 15px;*/
 
 }
+.copy {
+    cursor: pointer;
+    display: inline-block;
+    min-height: 1em;
+    outline: 0;
+    border: none;
+    vertical-align: baseline;
+    background: #e0e1e2;
+    color: rgba(0,0,0,.6);
+    font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+    margin: 0 .25em 0 0;
+    text-transform: none;
+    text-shadow: none;
+    font-weight: 700;
+    line-height: 1em;
+    font-style: normal;
+    text-align: center;
+    text-decoration: none;
+    border-radius: .28571429rem;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-transition: opacity .1s ease,background-color .1s ease,color .1s ease,box-shadow .1s ease,background .1s ease;
+    transition: opacity .1s ease,background-color .1s ease,color .1s ease,box-shadow .1s ease,background .1s ease;
+    will-change: '';
+    padding: .78571429em;
+    -webkit-tap-highlight-color: transparent;
+}
+.copy:hover {
+    box-shadow: 0 0 0 1px transparent inset, 0 0 0 0 rgba(34,36,38,.15) inset;
+    background: #c6c8c9;
+}
+.right {
+    float: right;
+    margin-right: 0;
+    margin-left: .25em;
+}
+
+.highlight {
+    color: #839496;
+    background: #002b36;
+}
+
 .post-header.with-cover{
     background-color: #559262;
 }
@@ -694,7 +745,6 @@ figure.highlight.sh {
 #home-header {
     background: #fdfdfd;
 }
-
 
 
 
