UPDATING SOME STYLEZ boiiii

--- a/themes/gstylez/layout/post.ejs
+++ b/themes/gstylez/layout/post.ejs
@@ -99,9 +99,9 @@
     <aside>
         <div id="toc">
             <div class="Supporter Supporter--size-250x250">
-                <!--<div class="Supporter-placeholder" id="ad3">-->
-                    <!--<h4>If you are enjoying this blog post, please consider pausing AdBlock on this domain. It helps us cover hosting fees. :)</h4>-->
-                <!--</div>-->
+                <div class="Supporter-placeholder" id="ad3">
+                    <h4>If you are enjoying this blog post, please consider pausing AdBlock on this domain. It helps us cover hosting fees. :)</h4>
+                </div>
                 <div>
                     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- THE REal top right ********** -->
