--- a/themes/gstylez/layout/partials/footer.ejs
+++ b/themes/gstylez/layout/partials/footer.ejs
@@ -9,6 +9,7 @@
 <%- js('lib/jquery.tocify') %>
 <%- js('js/main') %>
 <%- js('js/ads') %>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.8.0/jquery.modal.min.js" type="text/javascript" charset="utf-8"></script>
 <script type='text/javascript'>
     if(!document.getElementById('oOEeBTitMpvD')){
         document.getElementById('ad1').style.display='block';
@@ -26,8 +27,8 @@
 
 
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-84805359-1', 'auto');
@@ -35,7 +36,7 @@
 
 
     !function(g,s,q,r,d){r=g[r]=g[r]||function(){(r.q=r.q||[]).push(
-                    arguments)};d=s.createElement(q);q=s.getElementsByTagName(q)[0];
+            arguments)};d=s.createElement(q);q=s.getElementsByTagName(q)[0];
         d.src='//d1l6p2sc9645hc.cloudfront.net/tracker.js';q.parentNode.
         insertBefore(d,q)}(window,document,'script','_gs');
 
@@ -69,7 +70,31 @@
 <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
 </script>
 <noscript>
-<div style="display:inline;">
-    <img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/871593227/?label=9Z_1CO2i82wQi-rNnwM&amp;guid=ON&amp;script=0"/>
+    <div style="display:inline;">
+        <img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/871593227/?label=9Z_1CO2i82wQi-rNnwM&amp;guid=ON&amp;script=0"/>
     </div>
-    </noscript>
+</noscript>
+
+<div id="dialog" title="Email Signup" style="display:none;">
+    <!-- Begin MailChimp Signup Form -->
+    <div id="mc_embed_signup">
+        <form action="//progblog.us15.list-manage.com/subscribe/post?u=bcf9d21d6bff38a0a9a2c1f4a&amp;id=2f57106f06" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+                <label for="mce-EMAIL">Subscribe to our mailing list!</label>
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_bcf9d21d6bff38a0a9a2c1f4a_2f57106f06" tabindex="-1" value=""></div>
+                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            </div>
+        </form>
+    </div>
+    <!--End mc_embed_signup-->
+</div>
+
+<script>
+    $( function() {
+        $("ul.menus li:last-child a").on("click", function () {
+            $( "#dialog" ).modal();
+        });
+    } );
+</script>
