updated my posts

--- a/themes/gstylez/layout/page.ejs
+++ b/themes/gstylez/layout/page.ejs
@@ -4,9 +4,8 @@
             <h1>
                 <%=page.title%> 
             </h1>
-            <small><%- date(page.date, 'YYYY/M/D') %></small>
+            <!--<small><%- date(page.date, 'YYYY/M/D') %></small>-->
             <%-page.content%>
         </article>
-        <%- partial('partials/comments') %>
     </div>
 </div>
