--- a/themes/gstylez/layout/partials/head.ejs
+++ b/themes/gstylez/layout/partials/head.ejs
@@ -73,4 +73,5 @@
             <%- js('js/transition.min') %>
             </meta>
         </meta>
-    </head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.8.0/jquery.modal.min.js" type="text/javascript" charset="utf-8"></script>
+</head>
